--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@react-native/new-app-screen": "0.82.0",
+    "@react-navigation/bottom-tabs": "^7.4.9",
     "@react-navigation/native": "^7.1.18",
     "@react-navigation/stack": "^7.4.10",
     "react": "19.1.1",
@@ -20,6 +21,7 @@
     "react-native-gesture-handler": "^2.28.0",
     "react-native-safe-area-context": "^5.5.2",
     "react-native-screens": "^4.16.0",
+    "react-native-step-indicator": "^1.0.3",
     "react-native-svg": "^15.14.0",
     "react-native-vector-icons": "^10.3.0"
   },
